# cpp-exercise

./: classdemo.cpp  header.cpp  header.hpp  initializer.cpp  modernc++.md  mutex  mutex.cpp  namespace.cpp  pointer.cpp  right_value_reference.cpp
bashscript/: variable.sh
gtest/: CMakeLists.txt  README.md
gtest/include/: student.h
gtest/src/: gtest.cpp  gtest_fixture.cpp  student.cpp
